fix link css js

--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>TechnoScape</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="landingpage.css" />
     </head>
     <body>
         <!-- Navbar -->
@@ -308,6 +308,6 @@
         <!-- Footer -->
         <footer></footer>
 
-        <script src="script.js"></script>
+        <script src="landingpage.js"></script>
     </body>
 </html>
