fix hover color for next button

--- a/frontend/register_lomba3.html
+++ b/frontend/register_lomba3.html
@@ -24,7 +24,7 @@
     <body>
         <div class="header">
             <img
-                src="technoscape_logo.png"
+                src="assets/technoscape_logo.png"
                 alt="TechnoScape logo"
                 width="50"
                 height="50"
@@ -36,7 +36,9 @@
                 <h2>
                     Group Registration
                     <div class="close-button-container">
-                        <span class="material-icons">close</span>
+                        <a href="landingpage.html">
+                            <img src="assets/close.png" alt="Close" />
+                        </a>
                     </div>
                 </h2>
             </div>
